Merged PR 660: TASK_3090 TASK_3091 Configure Cors
Update Security Config
Update pom.xml
Update pipeline.yml